Add DeviceIntegrationTest.
Change-Id: I3a48abad6a45d59ac29f407003d689416d0f48b0